// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runtime aggregations: aggregations example should succeed 1`] = `"success"`;

exports[`runtime blog: blog example should succeed 1`] = `"success"`;

exports[`runtime blog-dot-env: blog-dot-env example should succeed 1`] = `"success"`;

exports[`runtime blog-env: blog-env example should not succeed 1`] = `
"error: Environment variable not found: SQLITE_URL.
  -->  schema.prisma:3
   | 
 2 |   provider = \\"sqlite\\"
 3 |   url      = env(\\"SQLITE_URL\\")
   | 

Validation Error Count: 1"
`;

exports[`runtime blog-env-postgresql: blog-env-postgresql example should succeed 1`] = `"success"`;

exports[`runtime chmod: chmod example should succeed 1`] = `"success"`;

exports[`runtime corruption: corruption example should succeed 1`] = `"success"`;

exports[`runtime distinct: distinct example should succeed 1`] = `"success"`;

exports[`runtime enums: enums example should succeed 1`] = `"success"`;

exports[`runtime error-link: error-link example should succeed 1`] = `"success"`;

exports[`runtime incorrect-column-type: incorrect-column-type example should not succeed 1`] = `
"
Invalid \`prisma.user.findMany()\` invocation in



  Attempted to serialize scalar '123' with incompatible type 'String'"
`;

exports[`runtime middlewares: middlewares example should succeed 1`] = `"success"`;

exports[`runtime middlewares-manipulation: middlewares-manipulation example should succeed 1`] = `"success"`;

exports[`runtime missing-binary: missing-binary example should not succeed 1`] = `
"
Invalid \`prisma.user.findMany()\` invocation in



  Query engine binary for current platform could not be found.
This probably happens, because you built Prisma Client on a different platform.
(Prisma Client looked in \\"

Files in 

  Dataloader.d.ts
  browser-chalk.d.ts
  browser-terminal-link.d.ts
  browser.d.ts
  dmmf-types.d.ts
  dmmf.d.ts
  error-types.d.ts
  externalToInternalDmmf.d.ts
  getLogLevel.d.ts
  getPrismaClient.d.ts
  highlight
  index.d.ts
  index.js
  index.js.map
  mergeBy.d.ts
  query.d.ts
  transformDmmf.d.ts
  utils
  visit.d.ts


To solve this problem, add the platform X to the \\"generator\\" block in the \\"schema.prisma\\" file:
generator client {
  provider      = \\"prisma-client-js\\"
  binaryTargets = [\\"native\\"]
}

Then run \\"prisma generate\\" for your changes to take effect.
Read more about deploying Prisma Client: https:"
`;

exports[`runtime missing-binary-native: missing-binary-native example should not succeed 1`] = `
"
Invalid \`prisma.user.findMany()\` invocation in



  Query engine binary for current platform could not be found.
This probably happens, because you built Prisma Client on a different platform.
(Prisma Client looked in \\"

Files in 

  Dataloader.d.ts
  browser-chalk.d.ts
  browser-terminal-link.d.ts
  browser.d.ts
  dmmf-types.d.ts
  dmmf.d.ts
  error-types.d.ts
  externalToInternalDmmf.d.ts
  getLogLevel.d.ts
  getPrismaClient.d.ts
  highlight
  index.d.ts
  index.js
  index.js.map
  mergeBy.d.ts
  query.d.ts
  transformDmmf.d.ts
  utils
  visit.d.ts

You already added the platform X to the \\"generator\\" block
in the \\"schema.prisma\\" file as described in https:
but something went wrong. That's suboptimal.

Please create an issue at https:"
`;

exports[`runtime missing-column: missing-column example should not succeed 1`] = `
"
Invalid \`prisma.user.findMany()\` invocation in



  Error occurred during query execution:
ConnectorError(ConnectorError { user_facing_error: None, kind: QueryError(SqliteFailure(Error { code: Unknown, extended_code: 1 }, Some(\\"no such column: dev.User.name\\"))) })"
`;

exports[`runtime missing-relation: missing-relation example should succeed 1`] = `"success"`;

exports[`runtime missing-table: missing-table example should not succeed 1`] = `
"
Invalid \`prisma.user.findMany()\` invocation in



  The underlying table for model \`dev.User\` does not exist."
`;

exports[`runtime new-line: new-line example should succeed 1`] = `"success"`;

exports[`runtime restart: restart example should succeed 1`] = `"success"`;

exports[`runtime sqlite-variable-limit: sqlite-variable-limit example should succeed 1`] = `"success"`;

exports[`runtime transaction: transaction example should succeed 1`] = `"success"`;
